z-index issue solved

--- a/styles/suggestion.css
+++ b/styles/suggestion.css
@@ -7,6 +7,7 @@
   right: 0;
   display: flex;
   flex-direction: row;
+  z-index: 5;
 }
 .suggestion span {
   background: rgba(255, 255, 255, 0.1);
